--- a/main.html
+++ b/main.html
@@ -12,7 +12,11 @@
 
     function getComputerChoice() {
         const choice = ['Rock', 'Paper', 'Scissors'];
+        const randomChoice = choice[Math.floor(Math.random() * choice.length)];
+        console.log(randomChoice);
     }
+
+    getComputerChoice();
 
 
     </script>
