--- a/main.html
+++ b/main.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script type="text/javascript" src="rps.js"></script>
+
+    <div class="buttons">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+    <div class="textOutputs">
+        <div class="score"></div>
+        <div class="result"></div>
+    </div>
+
 </body>
+
+<script type="text/javascript" src="rps.js" defer></script>
+
 </html>
